Added Authentication to Angular Admin App

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -31,6 +31,8 @@
         <script src="./js/app.js"></script>
         <script src="./js/router.js"></script>
 
+        <script src="./js/controllers/index/authenticate.js"></script>
+
         <script src="./js/controllers/users/index.js"></script>
         <script src="./js/controllers/users/edit.js"></script>
         <script src="./js/controllers/users/view.js"></script>
