--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,23 +7,40 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
-        <p></p>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-9 col-sm-push-3"><div ng-view></div></div>
-                <div class="col-sm-3 col-sm-pull-9">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <a href='#/' class="panel-title">Administrator</a>
-                        </div>
-                        <div class="list-group">
-                            <a href='#/users' class='list-group-item'>Users</a>
-                        </div>
-                    </div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#/">Administrator</a>
                 </div>
+
+                <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#/users">Users</a></li>
+                        <li class="dropdown">
+                            <a href='' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span> <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="#/users">Profile</a></li>
+                                <li class="divider"></li>
+                                <li><a href="#/logout">Logout</a></li>
+                            </ul>
+                         </li>
+                     </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12"><div ng-view></div></div>
             </div>
         </div>
         <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
