--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,33 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
-        <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#/">Administrator</a>
-                </div>
-
-                <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#/users">Users</a></li>
-                        <li class="dropdown">
-                            <a href='' class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog"></span> <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li><a href="#/users">Profile</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#/logout">Logout</a></li>
-                            </ul>
-                         </li>
-                     </ul>
-                </div>
-            </div>
-        </nav>
+        <app-nav-bar></app-nav-bar>
         <div class="container">
             <div class="row">
                 <div class="col-sm-12"><div ng-view></div></div>
@@ -56,5 +30,7 @@
         <script src="./js/controllers/users/create.js"></script>
         <script src="./js/services/users.js"></script>
         <script src="./js/services/gravatar.js"></script>
+
+        <script src="./js/directives/appNavBar.js"></script>
     </body>
 </html>
