Added AngularJS Projects Management

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,8 +2,8 @@
 <html lang="en" ng-app="Administrator">
     <head>
         <title>Administration</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
@@ -30,6 +30,12 @@
         <script src="./js/controllers/users/create.js"></script>
         <script src="./js/services/users.js"></script>
         <script src="./js/services/gravatar.js"></script>
+
+        <script src="./js/controllers/projects/index.js"></script>
+        <script src="./js/controllers/projects/edit.js"></script>
+        <script src="./js/controllers/projects/view.js"></script>
+        <script src="./js/controllers/projects/create.js"></script>
+        <script src="./js/services/projects.js"></script>
 
         <script src="./js/directives/appNavBar.js"></script>
     </body>
