Added Angular Manage Articles Stack with MarkDown

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -19,6 +19,12 @@
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+
+        <script src="./js/vendor/showdown.js"></script>
+        <script src="./js/filters/markdown.js"></script>
+        <script src="./js/vendor/extensions/table.js"></script>
+        <script src="./js/vendor/extensions/github.js"></script>
+
         <script src="./js/app.js"></script>
         <script src="./js/router.js"></script>
 
@@ -36,6 +42,12 @@
         <script src="./js/controllers/projects/view.js"></script>
         <script src="./js/controllers/projects/create.js"></script>
         <script src="./js/services/projects.js"></script>
+
+        <script src="./js/controllers/articles/index.js"></script>
+        <script src="./js/controllers/articles/edit.js"></script>
+        <script src="./js/controllers/articles/view.js"></script>
+        <script src="./js/controllers/articles/create.js"></script>
+        <script src="./js/services/articles.js"></script>
 
         <script src="./js/directives/appNavBar.js"></script>
     </body>
