--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -4,6 +4,7 @@
         <title>Administration</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="./css/admin.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
     <body>
@@ -50,5 +51,6 @@
         <script src="./js/services/articles.js"></script>
 
         <script src="./js/directives/appNavBar.js"></script>
+        <script src="./js/directives/articleTabs.js"></script>
     </body>
 </html>
