Added Local File References

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,8 +2,8 @@
 <html lang="en" ng-app="Administrator">
     <head>
         <title>Administration</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="./css/admin.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     </head>
@@ -14,12 +14,12 @@
                 <div class="col-sm-12"><div ng-view></div></div>
             </div>
         </div>
-        <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-        <script src="//crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/md5.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-resource.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+        <script src="./js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="./js/vendor/bootstrap.min.js"></script>
+        <script src="./js/vendor//md5.js"></script>
+        <script src="./js/vendor/angular.min.js"></script>
+        <script src="./js/vendor/angular-resource.min.js"></script>
+        <script src="./js/vendor/angular-route.min.js"></script>
 
         <script src="./js/vendor/showdown.js"></script>
         <script src="./js/filters/markdown.js"></script>
