--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -2,7 +2,8 @@
 <html lang="en" ng-app="Administrator">
     <head>
         <title>Administration</title>
-        <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <!--<link rel="stylesheet" href="./css/bootstrap.min.css">-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="./css/admin.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
