--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -17,7 +17,7 @@
         </div>
         <script src="./js/vendor/jquery-1.11.2.min.js"></script>
         <script src="./js/vendor/bootstrap.min.js"></script>
-        <script src="./js/vendor//md5.js"></script>
+        <script src="./js/vendor/md5.js"></script>
         <script src="./js/vendor/angular.min.js"></script>
         <script src="./js/vendor/angular-resource.min.js"></script>
         <script src="./js/vendor/angular-route.min.js"></script>
