Update Page Layouts

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -26,6 +26,7 @@
         <script src="./js/filters/markdown.js"></script>
         <script src="./js/vendor/extensions/table.js"></script>
         <script src="./js/vendor/extensions/github.js"></script>
+        <script src="./js/vendor/extensions/gist.js"></script>
 
         <script src="./js/app.js"></script>
         <script src="./js/router.js"></script>
